.config/relics/rote/tests/snapshots/wording__attach-claiming.snap
---
source: rote/tests/wording.rs
expression: "render(&rows, 0, None, false, false)"
---
╭─ attach ──────────────────────────────────────────────────── Sun 13 Sep ─╮
│                                                                          │
│   ▸ escrow-p  attach · dormant here                                      │
│                                                                          │
│   escrow-p@2 · enrolled 2026-09-14 · rung 5 · reviewed 3d ago            │
│   type it as you know it — nothing here can check it                     │
│   ╭──────────────────────────────────────────────────────────────────╮   │
│   │                                                                  │   │
│   ╰──────────────────────────────────────────────────────────────────╯   │
│                                                                          │
│                                                               ^R  show   │
│                                                                          │
╰──────────────────────────────────────────────────────────────────────────╯
