.config/relics/rote/tests/snapshots/wording__attach-confirming.snap
---
source: rote/tests/wording.rs
expression: "render(&rows, 0, None, false)"
---
╭─ rote ────────────────────────────────────────────────────── Sun 13 Sep ─╮
│                                                                          │
│   ▸ escrow-p  attach · dormant here                                      │
│                                                                          │
│   escrow-p@2 · enrolled 2026-09-14 · rung 5 · reviewed 3d ago            │
│   again                                                                  │
│   ╭──────────────────────────────────────────────────────────────────╮   │
│   │                                                                  │   │
│   ╰──────────────────────────────────────────────────────────────────╯   │
│                                                                          │
│                                                                          │
│                                                                          │
╰──────────────────────────────────────────────────────────────────────────╯
