.config/relics/rote/tests/snapshots/wording__attach-replacing.snap
---
source: rote/tests/wording.rs
expression: "render(&rows, 0, None, false)"
---
╭─ rote ────────────────────────────────────────────────────── Sun 13 Sep ─╮
│                                                                          │
│   ▸ escrow-p  attach · replacing                                         │
│                                                                          │
│   escrow-p@2 · enrolled 2026-09-14 · rung 5 · reviewed 3d ago            │
│   type it as you know it — nothing here can check it                     │
│   ╭──────────────────────────────────────────────────────────────────╮   │
│   │                                                                  │   │
│   ╰──────────────────────────────────────────────────────────────────╯   │
│                                                                          │
│                                                                          │
│                                                                          │
╰──────────────────────────────────────────────────────────────────────────╯
