.config/relics/rote/tests/snapshots/wording__closing-aided.snap
---
source: rote/tests/wording.rs
assertion_line: 233
expression: "closing(&rows, captures, &[])"
---
╭─ done ────────────────────────────────────────────────────── Sun 13 Sep ─╮
│                                                                          │
│     warmup-p  aided                       ✓  x2                          │
│                                                                          │
│   recorded  lapsed                                                       │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│   press any key                                                          │
│                                                                          │
╰──────────────────────────────────────────────────────────────────────────╯
