.config/relics/rote/tests/snapshots/wording__closing-recovered.snap
---
source: rote/tests/wording.rs
expression: "closing(&rows, drills, Vec::new(), &[])"
---
╭─ done ────────────────────────────────────────────────────── Sun 13 Sep ─╮
│                                                                          │
│     warmup-p  review · 30d · at cap · aided   ✓                          │
│                                                                          │
│   recorded  failed · recovered · aided                                   │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│   press any key                                                          │
│                                                                          │
╰──────────────────────────────────────────────────────────────────────────╯
