.config/relics/rote/tests/snapshots/wording__drill-aided.snap
---
source: rote/tests/wording.rs
expression: "render(&rows, 0, Some(\"not it · follow-up 2\"), false, false)"
---
╭─ rote ────────────────────────────────────────────────────── Sun 13 Sep ─╮
│                                                                          │
│   ▸ escrow-p  review · 30d · at cap · aided                              │
│                                                                          │
│                                                                          │
│   looked up                                                              │
│   ╭──────────────────────────────────────────────────────────────────╮   │
│   │                                                                  │   │
│   ╰──────────────────────────────────────────────────────────────────╯   │
│                                                                          │
│   not it · follow-up 2                                        ^R  show   │
│                                                                          │
╰──────────────────────────────────────────────────────────────────────────╯
