.config/relics/rote/tests/snapshots/wording__drill-follow-up.snap
---
source: rote/tests/wording.rs
expression: "render(&rows, 0, Some(\"not it · follow-up 2\"), true, false)"
---
╭─ rote ────────────────────────────────────────────────────── Sun 13 Sep ─╮
│                                                                          │
│   ▸ escrow-p  review · 30d · at cap                                      │
│                                                                          │
│                                                                          │
│   a follow-up — measured by nothing                                      │
│   ╭──────────────────────────────────────────────────────────────────╮   │
│   │                                                                  │   │
│   ╰──────────────────────────────────────────────────────────────────╯   │
│                                                                          │
│   not it · follow-up 2                       ^L  look it up   ^R  show   │
│                                                                          │
╰──────────────────────────────────────────────────────────────────────────╯
